<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".activity.ProfileActivity"
              android:background="@color/white"
              android:weightSum="1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/prompt_email"/>

    <EditText
        android:id="@+id/userEmail"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionNext"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/prompt_username"/>

    <EditText             android:id="@+id/userUsername"
                          android:textColor="@color/black"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:maxLines="1"/>

    <TextView
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_name"/>

    <EditText             android:id="@+id/userName"
        android:inputType="text"
        android:layout_width="match_parent"
                          android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:singleLine="true"/>

    <TextView
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/major"/>

    <EditText             android:id="@+id/userMajor"
        android:inputType="text"
        android:layout_width="match_parent"
                          android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:singleLine="true"/>

    <TextView
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_password"/>


    <EditText
        android:textColor="@color/black" android:id="@+id/userPassword"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:singleLine="true" />

    <Button
        android:id="@+id/LogoutButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/save_changes"
        android:background="@color/black"
        android:textColor="@color/white"
        android:onClick="saveChanges"/>


</LinearLayout>