<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".activity.RegisterActivity"
              android:background="@color/white"
    android:weightSum="1">




    <EditText             android:id="@+id/eEmailView"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
                          android:textColorHint="@color/black"
        android:hint="@string/prompt_email"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionNext"
                          android:layout_weight="0.15"
        android:textColor="@color/black" />

    <EditText             android:id="@+id/eUsernameView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
                          android:textColorHint="@color/black"
        android:hint="@string/prompt_username"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:maxLines="1"
                          android:layout_weight="0.15"
        android:textColor="@color/black" />

    <EditText             android:id="@+id/eNameView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
                          android:textColorHint="@color/black"
        android:hint="@string/prompt_name"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:singleLine="true"
                          android:layout_weight="0.15"
        android:textColor="@color/black" />

    <EditText             android:id="@+id/eMajorView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
                          android:textColorHint="@color/black"
        android:hint="@string/major"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:singleLine="true"
                          android:layout_weight="0.15"
        android:textColor="@color/black" />


    <EditText             android:id="@+id/ePasswordView"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
                          android:textColorHint="@color/black"
        android:hint="@string/prompt_password"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:singleLine="true"
                          android:layout_weight="0.15"
        android:textColor="@color/black" />

    <Button
        android:background="@color/black"
        android:id="@+id/registerButton" style="?android:textAppearanceSmall"
        android:layout_width="353dp" android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/register_button"
        android:onClick="register"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:id="@+id/imageView2"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/popcorn"/>


</LinearLayout>