<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">



    <Button
        android:background="@color/black"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_year"
        android:id="@+id/recommend_year"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:singleLine="false" />


    <Button
        android:background="@color/black"
        android:textColor="@color/white"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/recommend_by_my_major"
        android:id="@+id/submit"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <EditText
        android:inputType="text"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_alignParentTop="true"
        android:layout_marginTop="49dp"
        android:layout_alignLeft="@+id/submit"
        android:layout_alignStart="@+id/submit"
        android:layout_alignRight="@+id/submit"
        android:layout_alignEnd="@+id/submit" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/select_your_year"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:singleLine="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/click_recommend_major"
        android:id="@+id/textView3"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>