<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <SearchView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/movieSearchView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:background="@color/black"
        android:textColor="@color/white"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/searchMovie"
        android:id="@+id/movieSearchButton"
        android:layout_below="@+id/movieSearchView"
        android:layout_toLeftOf="@+id/recentDVDSearch"
        android:layout_toStartOf="@+id/recentDVDSearch" />

    <Button
        android:background="@color/black"
        android:textColor="@color/white"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/new_releases"
        android:id="@+id/newReleaseSearch"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/movieSearchButton"
        android:layout_toLeftOf="@+id/movieSearchButton"
        android:layout_toStartOf="@+id/movieSearchButton" />

    <Button
        android:background="@color/black"
        android:textColor="@color/white"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/recent_dvds"
        android:id="@+id/recentDVDSearch"
        android:layout_marginRight="41dp"
        android:layout_marginEnd="41dp"
        android:layout_alignTop="@+id/newReleaseSearch"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>