<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".activity.WelcomeActivity"
    android:background="@color/white"
                android:id="@+id/welcome">

    <Button
        android:background="@color/black"
        android:textColor="@color/white"
        android:text="@string/login_button"
        android:layout_width="225sp"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:textStyle="bold"
        android:clickable="true"
        android:onClick="openLogin"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"/>

    <Button
        android:background="@color/black"
        android:textColor="@color/white"
        android:text="@string/register_button"
        android:layout_width="225sp"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:textStyle="bold"
        android:clickable="true"
        android:onClick="openRegister"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_marginBottom="41dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black"
        android:text="@string/app_name"
        android:id="@+id/textView"
        android:textSize="28sp"
        android:singleLine="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="225dp"
        android:id="@+id/imageView"
        android:src="@drawable/movieicon"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"/>

</RelativeLayout>
